# VehicleMonitorService

./: LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5db1149d2a09_initial_migration.py
src/conf/: config.py
src/entity/: models.py
src/repositories/: company_repository.py
src/routes/: company_routes.py
src/schemas/: company_schema.py
src/services/: company_service.py
