[tool.poetry]
name = "vehiclemonitorservice"
version = "0.1.0"
description = ""
authors = ["paulmusquaro <136118097+paulmusquaro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = {extras = ["email"], version = "^2.11.3"}
pydantic-settings = "^2.8.1"
sqlalchemy = "^2.0.40"
fastapi = "^0.115.12"
alembic = "^1.15.2"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
